--- a/scss/responsive/_mobile-800.scss
+++ b/scss/responsive/_mobile-800.scss
@@ -25,9 +25,9 @@
 
 
     width: 90vw;
-    //max-width: 90%;
+    max-width: 90%;
     height: 100vh;
-    //max-height: 100vh;
+    max-height: 100%;
 
 
 
